# stampy_nb

./: .gitignore  README.md  justfile  pyproject.toml  research_journal.md
nbs/: mjc_001_EDA.ipynb
