[tool.poetry]
name = "stampy_nb"
version = "0.1.0"
description = "Aligment rag, in simple nb"
authors = ["wassname"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
# scikit-learn = "^1.3.1"
loguru = "^0.7.2"
tqdm = "^4.66.1"
langchain = "^0.2.5"
guidance = "^0.1.15"
python-dotenv = "^1.0.1"
datasets = "^2.20.0"
openai = "^1.35.3"
ollama = "^0.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
ruff = "^0.1.3"

[[tool.poetry.source]]
# pytorch cuda needs to compe from another source https://python-poetry.org/docs/dependency-specification/#source-dependencies
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
